hphp/test/slow/parser/func_arg.php.expectf
Fatal error: Invalid expression in constant initializer in %s/func_arg.php on line 7
